--- a/styles/style.css
+++ b/styles/style.css
@@ -454,3 +454,22 @@ Some Facts Section Done
 }
 
 /* Footer styles */
+.footer{
+    background: #FFF4E7;
+    margin: 50px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;   
+    color: #424242;
+}
+
+/* Footer Responsive styles */
+.footer{
+    font-size: 16px; 
+}
+.footer div{
+    width: 250px;
+    text-align: center;
+}
